cleanup for first review

--- a/expe.tex
+++ b/expe.tex
@@ -44,7 +44,7 @@ To allow enough clearance for a bigger instrumentation surrounding the sample, s
 
 %The experimental geometry is somewhat similar to that used for FDTD simulations above. Also the results are similar: we get the complex amplitude transmission spectrum,  
 \begin{figure}[ht] \caption{\textit{Experimental setup for terahertz time-domain spectroscopy}} \label{fg_exp} \centering 
-	\includegraphics[width=13cm]{img/exp_THz_sampling.pdf}
+	\includegraphics[width=\textwidth]{img/exp_THz_sampling.pdf}
 \end{figure}
 
 Before the laser pulse entered the vacuum chamber to induce THz emitter photoexcitation, a small part of its energy was separated by a reflection from a microscope glass (\texttt{BS1} in Fig. \ref{fg_exp}) into the \textit{sampling} branch. 
@@ -108,7 +108,7 @@ The annealed spheres required further processing, as described by {Dr.} U-Chan C
 \paragraph{Theory of anisotropic sieves}%{{{
 Triple sieving on commercial sieves in Bordeaux, weaved from stainless steel wire, did not provide narrow enough size distribution. We therefore developed detailed methods of sample refinement and characterisation. 
 
-\begin{figure}[h] \caption{\textbf{a)} \textbf{b)} } \label{fg_sieve_pass_notpass} \centering 
+\begin{figure}[ht] \caption{\textbf{a)} \textbf{b)} } \label{fg_sieve_pass_notpass} \centering 
 \includegraphics[width=\textwidth]{img/technology/sieve_pass_notpass.pdf}
 \end{figure}
 In the following, we approximated the dielectric particles by ellipsoids with three (generally different) half-axes $$r_a \leq r_b \leq r_c.$$ For the purpose of sieving, only the values of the shortest two axes, $r_a$ and $r_b$, decide whether the particle can pass through the sieve. The longest ellipsoid axis $r_c$ does not affect this, although it may influence the sieving speed. Therefore we can represent each 3-D particle with its projection on the smallest possible ellipse, which is described by its \textit{minor axis} $\equiv 2r_a$, and by its \textit{major axis} $\equiv 2r_b$. For a given shape of a hole in a homogeneous flat sieve, it is easy to determine which values of minor and major axes allow a particle to pass through, and which not. For a square sieve such area in the parameter space forms a disk around the center of origin (Fig. \ref{fg_sieve_pass_notpass}a). It can be shown that when the sieve is diagonally stretched, forming a lozenge hole shape, the area of spheres allowed to pass changes into an ellipse (Fig. \ref{fg_sieve_pass_notpass}b). When the hole shape is circular or elliptical, it is obvious that the area forms a part of a square or of a rectangle, respectively  (Fig. \ref{fg_sieve_pass_notpass}c,d).
