--- a/t.tex
+++ b/t.tex
@@ -24,10 +24,9 @@
 %
 %\chapter{Theory}
 %\input{theory.tex}
-%\input{thztech.tex} % TODO
-%
-%\chapter{Numerical methods}
-%\input{numeric.tex}
+
+\chapter{Numerical methods}
+\input{numeric.tex}
 
 \chapter{Experimental methods}
 \input{expe.tex}
